[package]
name = "spbtle-rf-stm32f303re-test"
version = "0.0.1"
authors = ["Daniel Gallagher <pdanielgallagher@gmail.com>"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
lto = true
debug = true

[dependencies]
cortex-m-semihosting = "*"
embedded-hal = "*"
bluenrg = { git = "https://github.com/danielgallagher0/bluenrg" }
ble = { git = "https://github.com/danielgallagher0/ble-rs" }
nb = "*"

[dependencies.cortex-m]
version = "*"
features = ["cm7-r0p1"]

[dependencies.cortex-m-rt]
version= "*"
features = ["abort-on-panic"]

[dependencies.stm32f30x]
version = "*"
features = ["rt"]

[dependencies.stm32f30x-hal]
version = "0.1.1"
features = ["rt", "unproven"]

# Use a version of stm32f30x-hal where the GPIOs implement
# embedded-hal's unproven InputPin trait.
[patch.crates-io]
stm32f30x-hal = { git = "https://github.com/octycs/stm32f30x-hal" }

[target]

[target.thumbv7em-none-eabihf]

[target.thumbv7em-none-eabihf.dependencies]
